--- a/_posts/2017-03-18-osmancan.md
+++ b/_posts/2017-03-18-osmancan.md
@@ -10,9 +10,10 @@ category: ""
 theme: beige
 trans: cube
 visualworkflow: true
-published: false
+published: true
 title: Osmancan
 ---
+
 
 ## A New Post
 
@@ -20,4 +21,3 @@ Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the 
 
 
 ![2ptExample.PNG]({{site.baseurl}}/img/2ptExample.PNG)
-
